--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
+    "react-native-expandable-listview": "^1.3.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
