--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "expo-font": "^10.0.3",
     "react": "^17.0.2",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-native-expandable-listview": "^1.3.1",
+    "react-native-web": "^0.17.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
